--- a/URL to Google Drive.ipynb
+++ b/URL to Google Drive.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "URL To Google Drive.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     "accelerator": "TPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hyper9577/URL-To-Gdrive/blob/master/URL%20to%20Google%20Drive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -65,11 +76,11 @@
       },
       "source": [
         "import requests \n",
-        "file_url = \"Paste download link here\"\n",
+        "file_url = \"Paste your download link here\"\n",
         "    \n",
         "r = requests.get(file_url, stream = True) \n",
         " \n",
-        "with open(\"/content/drive/My Drive/Paste file name with extention here\", \"wb\") as file: \n",
+        "with open(\"/content/drive/My Drive/Paste your file name with extention here\", \"wb\") as file: \n",
         "    for block in r.iter_content(chunk_size = 1024): \n",
         "        if block: \n",
         "            file.write(block)"
